Fix menu on mobile

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -34,6 +34,9 @@ html
 .mainWrapper
 	position: relative
 
+	+r(767)
+		margin-top: 150px
+
 button
 	position: relative
 	background-color: $white
